tests/k8s_testcases/example_policies/testcase1_tag/testcase1tag-scheme-demo.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - testcase1tag-networkpolicy1.yaml
  - name: np2
    networkPolicyList:
      - testcase1tag-networkpolicy2.yaml
    
queries:
  - name: compare_np1_and_np2
    equivalence:
      - np1
      - np2
  - name: redundancy_np1_and_np2
    redundancy:
      - np1
      - np2
