tests/k8s_testcases/example_policies/testcase1_tag/testcase1tag-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - testcase1tag-networkpolicy1.yaml
    expectedWarnings: 2

  - name: np2
    networkPolicyList:
      - testcase1tag-networkpolicy2.yaml
    expectedWarnings: 2

queries:
  - name: emptiness
    emptiness:
      - np1
      - np2
    expected: 2
  - name: vacuousness
    vacuity:
      - np1
      - np2
    expected: 0
  - name: redundancy_np1_and_np2
    redundancy:
      - np1
      - np2
    expected: 2

  - name: pairwiseInterferes_np1_and_np2
    pairwiseInterferes:
      - np1
      - np2
    expected: 0

  - name: compare_np1_and_np2
    equivalence:
      - np1
      - np2
    expected: 0
  - name: containment_np1_and_np2
    containment:
      - np1
      - np2
    expected: 1
  - name: containment_np2_and_np1
    containment:
      - np2
      - np1
    expected: 1
